--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/underscoreHasan/WHMJ-Project#readme",
   "dependencies": {
     "@googlemaps/google-maps-services-js": "^3.3.26",
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "fs": "^0.0.1-security"
   }
 }
