--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/underscoreHasan/WHMJ-Project#readme",
   "dependencies": {
     "@googlemaps/google-maps-services-js": "^3.3.26",
+    "body-parser": "^1.20.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
